# svgdb-scraper

./: LICENSE  main.py  pyproject.toml  requirements.txt
src/: constants.py
src/svgdb/: api.py  storage.py
src/utils/: image.py  metadata.py  rate_limit.py
